# interceptAR-plugin-template

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  examplePlugin.cpp
